--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ Yajun Yang's Home Page
         <H2 class="no-line"><span style="font-family: 楷体; font-size: 28px">杨雅君</span><span style="font-family: 'Times New Roman'; font-size: 26px">（Yajun Yang）</span></H2>
         <H3>副教授，博士生导师</H3>
         <div style="margin: 15px 0">天津大学，智能与计算学部，人工智能学院</div>
-        <div style="margin: 10px 0"><b>地址</b>: 天津市津南区雅观路135号天津大学北洋园校区55楼B505</div>
+        <div style="margin: 10px 0"><b>地址</b>: 天津市津南区雅观路135号天津大学北洋园校区55楼A410</div>
         <div style="margin: 10px 0"><b>邮箱</b>: yjyang@tju.edu.cn</div>
       </div>
       </TD>
@@ -159,17 +159,18 @@ Yajun Yang's Home Page
 <h2><a name="AboutMe" id="AboutMe"></a><a
 name="_AboutMe"></a> 个人简介</h2>
 <hr>
-<P><A name=id1></A>我目前是天津大学智能与计算学部的副教授，担任中国计算机学会数据库专业委员会执行委员、信息系统专业委员会执行委员。 分别于<A href="http://www.hit.edu.cn/">哈尔滨工业大学</A><A href="http://www.cs.hit.edu.cn/">计算机科学与技术学院</A> 和<A href="http://math.hit.edu.cn/">数学与应用数学学院</A>获得博士学位和学士学位。我曾在<A href="https://dbgroup.se.cuhk.edu.hk/">香港中文大学系统工程管理系</A>担任和<A href="https://www.griffith.edu.au/">澳大利亚格里菲斯大学信息工程学院</A>担任访问学者。本人长期担任 CIKM、DASFAA、APWEB-WAIM、ADMA 等国际重要学术会议程序委员会委员，以及担任 TKDE、WWW、Pattern Recognation、Information Science 等国际顶级或重要学术期刊和会议的审稿人。
+<P style="line-height: 1.8"><A name=id1></A>杨雅君，天津大学人工智能学院副教授/博士生导师。研究方向为：大模型知识增强、社会计算、图计算和图挖掘。目前担任中国计算机学会数据库专业委员会执行委员、信息系统专业委员会执行委员。 分别于<A href="http://www.hit.edu.cn/">哈尔滨工业大学</A><A href="http://www.cs.hit.edu.cn/">计算机科学与技术学院</A> 和<A href="http://math.hit.edu.cn/">数学与应用数学学院</A>获得博士学位和学士学位，师从<A href="https://csce.suat-sz.edu.cn/info/1008/1025.htm">李建中</A>教授和<A href="https://mypage.zjnu.edu.cn/gh/zh_CN/index/285516/list/index.htm">高宏</A>教授。曾在<A href="https://dbgroup.se.cuhk.edu.hk/">香港中文大学系统工程管理系</A>担任和<A href="https://www.griffith.edu.au/">澳大利亚格里菲斯大学信息工程学院</A>担任访问学者。目前在SIGMOD/VLDB/ICDE/KDD/NeurIPS/TOIS/ICDM/CIKM等国际会议和期刊上发表论文40余篇。
+主持国家自然基金重点项目课题、面上项目、青年项目、重点研发计划子课题等多项国家级项目。长期担任 CIKM、DASFAA、APWEB-WAIM、ADMA 等国际重要学术会议程序委员会委员，以及担任 TKDE、WWW、Pattern Recognation、Information Science 等国际顶级或重要学术期刊和会议的审稿人。
 </P>
 
-<font color=red><b>我们的团队朝气蓬勃，团结奋进。欢迎对图数据管理和图挖掘、图机器学习、社交网络分析感兴趣的同学加入我们的研究团队！!</font></b></P>
+<font color=red><b>欢迎有意加入我们团队攻读硕士/博士研究生的同学与我联系，请邮件咨询 yjyang@tju.edu.cn.</font></b></P>
 
 <h2><a name="ResearchInsterests" id="ResearchInsterests"></a><a
 name="_ResearchInsterests"></a> 研究方向</h2>
 <hr>
 <UL>
 <LI>大模型知识增强
-<LI>社交网络传播分析与预测
+<LI>社交网络分析与计算
 <LI>图数据管理、图挖掘、图机器学习
 </UL>
 
@@ -210,21 +211,21 @@ name="_ResearchInsterests"></a> 研究方向</h2>
 -->
 
 <h2><a name="Publications" id="Publications"></a><a
-name="_Publications"></a>论文发表（第一作者或通讯作者）</h2>
+name="_Publications"></a>代表性论文（第一作者/通讯作者）</h2>
 <hr>
 
 <OL class="pub-list">
 
  <LI>
-  		<b><font color="#FF0000">[KDD'25]</font></b>&nbsp 
+  		<b><font color="#FF0000">[SIGKDD]</font></b>&nbsp 
   		Zihan Feng, <B>Yajun Yang*</B>, Xin Huang, Hong Gao, Liping Jing, Qinghua Hu. 
         <B>Efficient Sphere-Effect Based Information Diffusion Prediction on Large-scale Social Networks.</B> <I> The 31st ACM SIGKDD Conference on Knowledge Discovery and Data Mining</I> <B>(KDD 2025) (CCF推荐A类会议)</B>, 2025.
         [<a href="publications/kdd25.pdf">PDF</a>]
-  </LI>
+ </LI>
 
 
-  <LI>
-  		<b><font color="#FF0000">[AAAI'25]</font></b>&nbsp 
+ <LI>
+  		<b><font color="#FF0000">[AAAI]</font></b>&nbsp 
   		Junliang Li, <B>Yajun Yang*</B>, Yujia Zhang, Qinghua Hu, Alan Zhao, Hong Gao. 
         <B>Public Opinion Field Effect and Hawkes Process Join Hands for Information Popularity Prediction.</B> <I>The AAAI Conference on Artificial Intelligence</I> <B>(AAAI 2025) (CCF推荐A类会议)</B>, 2025.
         [<a href="publications/aaai25.pdf">PDF</a>][<a href="https://dblp.org/rec/conf/aaai/LiYZHZ025.html?view=bibtex">Bibtex</a>]
@@ -232,7 +233,7 @@ name="_Publications"></a>论文发表（第一作者或通讯作者）</h2>
 
 
   <LI>
-  		<b><font color="#FF0000">[DASFAA'24]</font></b>&nbsp 
+  		<b><font color="#FF0000">[DASFAA]</font></b>&nbsp 
   		Zihan Feng, Rui Wu, <B>Yajun Yang*</B>, Hong Gao, Xin Wang, Xueli Liu, Qinghua Hu. 
         <B>Multi-level Contrastive Learning on Weak Social Networks for Information Diffusion Prediction.</B> <I>Database Systems for Advanced Applications - 29th International Conference</I> <B>(DASFAA 2024) (CCF推荐B类会议)</B>, 2024.
         [<a href="publications/dasfaa24.pdf">PDF</a>][<a href="https://dblp.org/rec/conf/dasfaa/FengWYGWLH24.html?view=bibtex">Bibtex</a>]
@@ -240,40 +241,41 @@ name="_Publications"></a>论文发表（第一作者或通讯作者）</h2>
 
 
   <LI>
-  		<b><font color="#FF0000">[SIGMOD'23]</font></b>&nbsp 
+  		<b><font color="#FF0000">[SIGMOD]</font></b>&nbsp 
   		<B>Yajun Yang</B>, Hanxiao Li, Xiangjv Zhu, Junhu Wang, Xin Wang*, Hong Gao. 
         <B>An Effective Index Method for Historical Reachability Queries over Evolving Graphs.</B> <I>The 2023 ACM SIGMOD/PODS International Conference on Management of Data</I> <B>(SIGMOD 2023) (CCF推荐A类会议)</B>, 2023.
         [<a href="publications/sigmod23.pdf">PDF</a>][<a href="https://dblp.org/rec/journals/pacmmod/YangLZW0023.html?view=bibtex">Bibtex</a>]
   </LI>
 
   <LI>
-  		<b><font color="#FF0000">[NeurIPS'23]</font></b>&nbsp 
+  		<b><font color="#FF0000">[NeurIPS]</font></b>&nbsp 
             Junliang Li, <B>Yajun Yang*</B>,Qinghua Hu, Xin Wang, Hong Gao.
         <B>Public Opinion Field Effect Fusion in Representation Learning for Trending Topics Diffusion.</B> <I>Advances in Neural Information Processing Systems 36</I> <B>(NeurIPS 2023) (CCF推荐A类会议)</B>, 2023.
         [<a href="publications/NeurIPS23.pdf">PDF</a>][<a href="https://dblp.org/rec/conf/nips/LiYHWG23.html?view=bibtex">Bibtex</a>]
   </LI>
 
   <LI>
-  		<b><font color="#FF0000">[ICDM'23]</font></b>&nbsp 
+  		<b><font color="#FF0000">[ICDM]</font></b>&nbsp 
             Junliang Li, <B>Yajun Yang*</B>,Qinghua Hu, Xin Wang, Hong Gao.
         <B>Hierarchical Label Inference Incorporating Attribute Semantics in Attributed Networks.</B> <I>The 2023 IEEE International Conference on Data Mining</I> <B>(ICDM 2023) (CCF推荐B类会议)</B>, 2023.
         [<a href="publications/ICDM23.pdf">PDF</a>][<a href="https://dblp.org/rec/conf/icdm/LiYHW023.html?view=bibtex">Bibtex</a>]
   </LI>
 
   <LI>
-  		<b><font color="#FF0000">[TOIS'23]</font></b>&nbsp 
+  		<b><font color="#FF0000">[TOIS]</font></b>&nbsp 
   		Hang Zhang, <B>Yajun Yang*</B>, Xin Wang, Hong Gao, Qinghua Hu. 
                                 <B>MLI: A Multi-level Inference Mechanism for User Attributes in Social Networks.</B> <I>ACM Transactions on Information Systems</I> <B>(TOIS 2023) (CCF推荐A类期刊)</B>, 2023.
         [<a href="publications/tois23.pdf">PDF</a>][<a href="https://dblp.uni-trier.de/rec/journals/tois/ZhangYWGH23.html?view=bibtex">Bibtex</a>]
   </LI>
 
   <LI>
-  		<b><font color="#FF0000">[DASFAA'23]</font></b>&nbsp 
+  		<b><font color="#FF0000">[DASFAA]</font></b>&nbsp 
   		Tianbao Wang, <B>Yajun Yang*</B>, Qinghu Hu, Hong Gao.
                                 <B>MRSCN: A GNN-based Model for Mining RelatIOnship Strength Changes between Nodes in Dynamic Networks.</B> <I>Database Systems for Advanced Applications - 28th International Conference</I> <B>(DASFAA 2023) (CCF推荐B类会议)</B>, 2023.
         [<a href="publications/dasfaa23.pdf">PDF</a>][<a href="https://dblp.uni-trier.de/rec/conf/dasfaa/WangYGH23.html?view=bibtex">Bibtex</a>]
   </LI>
 
+<!--
   <LI>
   		<b><font color="#FF0000">[IOTJ'22]</font></b>&nbsp 
   	                Jiawen Chen, <B>Yajun Yang*</B>, Chenyang Wang, Heng Zhang, Chao Qiu, Xiaofei Wang.
@@ -329,20 +331,24 @@ name="_Publications"></a>论文发表（第一作者或通讯作者）</h2>
                                 <B>IterG: An Iteratively Learning Graph Convolutional Network with Ontology Semantics.</B> <I>Web and Big Data - 4th International Joint Conference</I> <B>(APWeb-WAIM 2020) (CCF推荐C类会议)</B>, 2020.
         [<a href="publications/apweb20-2.pdf">PDF</a>][<a href="https://dblp.uni-trier.de/rec/conf/apweb/LiangZLY20.html?view=bibtex">Bibtex</a>]
   </LI>
+-->
 
  <LI>
-  		<b><font color="#FF0000">[软件学报'19]</font></b>&nbsp 
+  		<b><font color="#FF0000">[软件学报]</font></b>&nbsp 
   		LI Zhong-Fei, <B>YANG Ya-Jun*</B>, WANG Xin.
                                 <B>Rule Based Shortest Path Query Algorithm.</B> (In Chinese). <I>Journal of Software</I> <B> (CCF推荐A类中文期刊)</B>, 2019.
         [<a href="publications/js19-1.pdf">PDF</a>]
   </LI>
 
+<!--
  <LI>
   		<b><font color="#FF0000">[软件学报'19]</font></b>&nbsp 
   		WANG Xin, XU Qiang, CHAI Le-Le, <B>YANG Ya-Jun*</B>, CHAI Yun-Peng.
                                 <B>Efficient Distributed Query Processing on Large Scale RDF Graph Data.</B> (In Chinese). <I>Journal of Software</I> <B> (CCF推荐A类中文期刊)</B>, 2019.
         [<a href="publications/js19-2.pdf">PDF</a>]
-  </LI>
+ </LI>
+
+
 
  <LI>
   		<b><font color="#FF0000">[DSE'19]</font></b>&nbsp 
@@ -371,14 +377,17 @@ name="_Publications"></a>论文发表（第一作者或通讯作者）</h2>
         <B>A Label Inference Method Based on Maximal Entropy Random Walk over Graphs.</B> <I>The 18th Asia Pacific Web Conference</I> <B>(APWeb 2016) (CCF推荐C类会议)</B>, 2016.
         [<a href="publications/Pan-2016-A-label-inference-method-based-on-m.pdf">PDF</a>][<a href="https://dblp.uni-trier.de/rec/conf/apweb/PanYHS16.html?view=bibtex">Bibtex</a>]
   </LI>
+-->
 
   <LI>
-  		<b><font color="#FF0000">[VLDB'14]</font></b>&nbsp
+  		<b><font color="#FF0000">[VLDB]</font></b>&nbsp
   		<B>Yajun Yang</B>, Hong Gao, Jeffrey Xu Yu*, Jianzhong Li. 
         <B>Finding the Cost-Optimal Path with Time Constraint over Time-Dependent Graphs.</B> <I>The 40th International Conference on Very Large Databases</I> <B>(VLDB 2014) (CCF推荐A类会议)</B>, 2014.
         [<a href="publications/p673-yang.pdf">PDF</a>][<a href="https://dblp.uni-trier.de/rec/journals/pvldb/YangGYL14.html?view=bibtex">Bibtex</a>]
   </LI>
 
+
+<!--
   <LI>
   		<b><font color="#FF0000">[WWWJ'14]</font></b>&nbsp
   		<B>Yajun Yang</B>, Jeffrey Xu Yu*, Hong Gao, Jianzhong Li. 
@@ -410,6 +419,7 @@ name="_Publications"></a>论文发表（第一作者或通讯作者）</h2>
       [<a href="publications/cjc12-1.pdf">PDF</a>]
   </LI>
 
+
   <LI>
   		<b><font color="#FF0000">[计算机学报'12]</font></b>&nbsp
   		<B>YANG Ya-Jun</B>, GAO Hong*, LI Jian-Zhong.
@@ -423,6 +433,7 @@ name="_Publications"></a>论文发表（第一作者或通讯作者）</h2>
 		<B>A Distributed and Kernal Based Scheme for Location Verification in Wireless Sensor Networks.</B> (In English). 
         <I>The 5th Chinese Conference on Wireless Sensor Networks</I><B> (CWSN)</B>, 2011. <B>Best Paper Award</B>.	
   </LI>
+-->
 
 </OL>
 
@@ -430,34 +441,42 @@ name="_Publications"></a>论文发表（第一作者或通讯作者）</h2>
 name="_ResearchFundings"></a>研究项目</h2>
 <hr>
 <UL>
-<LI> 基于大语言模型的可解释多模态学习方法研究，国家自然科学基金重点项目，课题负责人（课题三：大语言模型知识增强）。
-<LI> 复杂舆论场环境下大规模社交网络舆情事件传播预测关键技术研究，国家自然科学基金面上项目，项目负责人。
-<LI> 自动化集装箱起重机货运放置点位智能推荐算法，天津港合作项目，项目负责人。
-<LI> 港口自动化起重机货运集装箱装船配载方案智能生成算法技术服务，天津港合作项目，项目负责人。
-<LI> XXXX算法技术服务，中国电子科技集团第五十四研究所，项目负责人。
-<LI> 社交媒体敏感热点内容传播动力学研究，人民网全国重点实验室共建项目，项目负责人。
-<LI> 基于复杂网络的协同智能计算和边缘自治优化方法，国家重点研发计划，子课题负责人。
-<LI> 大规模动态图中不稳定子结构挖掘算法研究，国家自然科学基金青年项目，项目负责人。
+<LI> 基于大语言模型的可解释多模态学习方法研究，<B>国家自然科学基金重点项目</B>，课题负责人（课题三：大语言模型知识增强）。
+<LI> 复杂舆论场环境下大规模社交网络舆情事件传播预测关键技术研究，<B>国家自然科学基金面上项目</B>，项目负责人。
+<LI> 自动化集装箱起重机货运放置点位智能推荐算法，<B>天津港合作项目</B>，项目负责人。
+<LI> 港口自动化起重机货运集装箱装船配载方案智能生成算法技术服务，<B>天津港合作项目</B>，项目负责人。
+<LI> XXXX算法技术服务，<B>中国电子科技集团第五十四研究所</B>，项目负责人。
+<LI> 社交媒体敏感热点内容传播动力学研究，<B>人民网全国重点实验室共建项目</B>，项目负责人。
+<LI> 基于复杂网络的协同智能计算和边缘自治优化方法，<B>国家重点研发计划</B>，子课题负责人。
+<LI> 大规模动态图中不稳定子结构挖掘算法研究，<B>国家自然科学基金青年项目</B>，项目负责人。
 </UL>
 
 <h2><a name="Destinations" id="Destinations"></a><a
 name="_Destinations"></a>毕业生去向</h2>
 
 <UL>
-<LI>2025：张三（xx公司），李四（xx公司）
-<LI>2024：张三（xx公司），李四（xx公司）
+<LI>李俊良&nbsp&nbsp&nbsp&nbsp&nbsp腾讯文心一言
+<LI>徐晓蕤&nbsp&nbsp&nbsp&nbsp&nbsp字节跳动
+<LI>王天保&nbsp&nbsp&nbsp&nbsp&nbspXXXXXX研究所
+<LI>普林发&nbsp&nbsp&nbsp&nbsp&nbsp腾讯金融
+<LI>张&nbsp&nbsp&nbsp航&nbsp&nbsp&nbsp&nbsp&nbsp天津市国税局
+<LI>潘子安&nbsp&nbsp&nbsp&nbsp&nbsp快手
+<LI>李晗笑&nbsp&nbsp&nbsp&nbsp&nbsp西安应用光学研究所
+<LI>李忠飞&nbsp&nbsp&nbsp&nbsp&nbsp银河证券
+<LI>于&nbsp&nbsp&nbsp鹏&nbsp&nbsp&nbsp&nbsp&nbsp天津市城市规划设计研究总院
+<LI>潘&nbsp&nbsp&nbsp晶&nbsp&nbsp&nbsp&nbsp&nbsp中国农业银行研发中心天津研发部
+
 </UL>
 
-<!--
 <h2><a name="Teaching" id="Teaching"></a><a
 name="_Teaching"></a>课程</h2>
 <hr>
 <UL>
 <LI>算法设计与分析 (<a href="course/Algorithm/Algorithm_01.pptx">A01</a>, <a href="course/Algorithm/Algorithm_02.pptx">A02</a>, <a href="course/Algorithm/Algorithm_03.pptx">A03</a>, <a href="course/Algorithm/Algorithm_04.pptx">A04</a>, <a href="course/Algorithm/Algorithm_05.pptx">A05</a>, <a href="course/Algorithm/Algorithm_06.pptx">A06</a>, <a href="course/Algorithm/Algorithm_07.pptx">A07</a>, <a href="course/Algorithm/Algorithm_08.pptx">A08</a>, <a href="course/Algorithm/Algorithm_09.pptx">A09</a>, <a href="course/Algorithm/Algorithm_10.pptx">A10</a>, <a href="course/Algorithm/Algorithm_11.pptx">A11</a>, <a href="course/Algorithm/Algorithm_12.pptx">A12</a>)
 <LI>人工智能数学基础（<a href="course/AImath/ch00.pdf">M01</a>, <a href="course/AImath/ch01.pdf">M02</a>, <a href="course/AImath/ch02.pdf">M03</a>, <a href="course/AImath/ch03.pdf">M04</a>, <a href="course/AImath/ch04.pdf">M05</a>, <a href="course/AImath/ch05.ppt">M06</a>, <a href="course/AImath/ch06.ppt">M07</a>）
-<LI>形式语言与自动机（<a href="course/FormalL/ch00.pdf">C01</a>, <a href="course/FormalL/ch01_1.pdf">C02</a>, <a href="course/FormalL/ch01_2.pdf">C03</a>, <a href="course/FormalL/ch02_1.pdf">C04</a>, <a href="course/FormalL/ch02_2.pdf">C05</a>, <a href="course/FormalL/ch03.pdf">C06</a>, <a href="course/FormalL/MD.pdf">C07</a>, <a href="course/FormalL/suppl_rg.pdf">C08</a>）
+<!--<LI>形式语言与自动机（<a href="course/FormalL/ch00.pdf">C01</a>, <a href="course/FormalL/ch01_1.pdf">C02</a>, <a href="course/FormalL/ch01_2.pdf">C03</a>, <a href="course/FormalL/ch02_1.pdf">C04</a>, <a href="course/FormalL/ch02_2.pdf">C05</a>, <a href="course/FormalL/ch03.pdf">C06</a>, <a href="course/FormalL/MD.pdf">C07</a>, <a href="course/FormalL/suppl_rg.pdf">C08</a>）-->
 </UL>
--->
+
 </div>
 
 <div id="chinese" style="display: none">
