--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@ Yajun Yang's Home Page
 		<b><a href="#_AboutMe">个人简介</a></b> | 
 		<b><a href="#_ResearchInsterests">研究方向</a></b> |
 		<!--<b><a href="#_News">新闻</a></b> | -->
-		<b><a href="#_Publications">论文发表</a></b> |
+		<b><a href="#_Publications">代表性论文</a></b> |
 		<b><a href="#_ResearchFundings">研究项目</a></b> |
-		<!--<b><a href="#_Teaching">课程</a></b> -->
-            <b><a href="#_Destinations">毕业生去向</a></b>
+        <b><a href="#_Destinations">毕业生去向</a></b> |
+		<b><a href="#_Teaching">课程</a></b>
 	</div>
 <br>
 
@@ -457,7 +457,7 @@ name="_Destinations"></a>毕业生去向</h2>
 <UL>
 <LI>李俊良&nbsp&nbsp&nbsp&nbsp&nbsp腾讯文心一言
 <LI>徐晓蕤&nbsp&nbsp&nbsp&nbsp&nbsp字节跳动
-<LI>王天保&nbsp&nbsp&nbsp&nbsp&nbspXXXXXX研究所
+<LI>王天保&nbsp&nbsp&nbsp&nbsp&nbsp中国航空工业集团沈阳飞机设计研究所
 <LI>普林发&nbsp&nbsp&nbsp&nbsp&nbsp腾讯金融
 <LI>张&nbsp&nbsp&nbsp航&nbsp&nbsp&nbsp&nbsp&nbsp天津市国税局
 <LI>潘子安&nbsp&nbsp&nbsp&nbsp&nbsp快手
@@ -491,9 +491,9 @@ name="_Teaching"></a>课程</h2>
     <TD>
       <div class="profile-info">
         <H2 class="no-line"><font face="Times New Roman" style="font-size: 26px">Yajun Yang</font><font face="楷体" style="font-size: 28px">（杨雅君）</font></H2>
-        <H3>Associate Professor, Doctoral Advisor</H3>
+        <H3>Associate Professor, Doctoral Supervisor</H3>
         <div style="margin: 15px 0">College of Intelligence and Computing<br>Tianjin University (TJU), Tianjin, China</div>
-        <div style="margin: 10px 0"><b>Address</b>: Room B505, 55th Building, Beiyang Park Campus, Tianjin University, No.135 YaGuan Road, Tianjin (150001), China</div>
+        <div style="margin: 10px 0"><b>Address</b>: Room A410, 55th Building, Beiyang Park Campus, Tianjin University, No.135 YaGuan Road, Tianjin (150001), China</div>
         <div style="margin: 10px 0"><b>Email</b>: yjyang@tju.edu.cn</div>
       </div>
       </TD>
@@ -503,15 +503,15 @@ name="_Teaching"></a>课程</h2>
     </TR></TBODY>
 	</TABLE>
 
-	<p class=navbar align=center style='text-align:center'>
-		<b><a href="#_AboutMe">Bio</a> </b> | 
-		<b><a href="#_ResearchInsterests">Research Insterests</a> </b> |
+	<div class="navbar">
+		<b><a href="#_AboutMe">Bio</a></b> | 
+		<b><a href="#_ResearchInsterests">Research Insterests</a></b> |
 		<!--<b><a href="#_News">News</a></b> | -->
-		<b><a href="#_Publications">Publications</a> </b>|
-		<b><a href="#_ResearchFundings">Research Fundings</a> </b>|
-            <b><a href="#_Destinations">Graduate Destinations</a> </b>
-		<!--<b><a href="#_Teaching">Teaching</a></b> -->
-	</p>
+		<b><a href="#_Publications">Publications</a></b> |
+		<b><a href="#_ResearchFundings">Research Fundings</a></b> |
+        <b><a href="#_Destinations">Graduate Destinations</a></b> |
+		<b><a href="#_Teaching">Teaching</a></b>
+	</div>
 <br>
 
 
@@ -519,9 +519,10 @@ name="_Teaching"></a>课程</h2>
 <h2><a name="AboutMe" id="AboutMe"></a><a
 name="_AboutMe"></a> About Me</h2>
 <hr>
-<P><A name=id1></A>I am currently working as a associate professor in School of Computer Science and Technology at Tianjin University. I am an executive committee member of Technology Committee of Information System and Technology Committee of Database  in CCF. I received my Ph.D degree and B.S. degree in School of Computer Science and Technology and Applied Mathematics repectively from Harbin Institute of Technology. I worked as a visiting scholar in Chinese Universtiy of Hong Kong and Griffith Unviersity. Now I am a PC member of DASFAA, APWEB-WAIM, ICPCSEE, ADMA, and invited reviewer of TKDE, WWW, Pattern Recognation, Information Science, ICPP and so on.  </P>
-
-<font color=red><b>Welcome to join us, if you are interested in graph data management, graph mining, machine learning and social network analysis.</font></b></P>
+<P style="line-height: 1.8"><A name=id1></A>Yajun Yang, Associate Professor & Ph.D. Supervisor, School of Artificial Intelligence, Tianjin University. Research Interests: Knowledge Enhancement for Large Language Models, Social Computing, Graph Computing and Graph Mining. Currently serving as an executive committee member of Technology Committee of Information System and Technology Committee of Database in CCF. I received my Ph.D. and B.S. degrees respectively from <A href="http://www.hit.edu.cn/">Harbin Institute of Technology, </A><A href="http://www.cs.hit.edu.cn/">School of Computer Science and Technology</A> and <A href="http://math.hit.edu.cn/">School of Mathematics and Applied Mathematics</A>, under the supervision of Professors <A href="https://csce.suat-sz.edu.cn/info/1008/1025.htm">Li Jianzhong</A> and <A href="https://mypage.zjnu.edu.cn/gh/zh_CN/index/285516/list/index.htm">Gao Hong</A>. I have been a visiting scholar at the <A href="https://dbgroup.se.cuhk.edu.hk/">Department of Systems Engineering and Engineering Management, The Chinese University of Hong Kong</A> and the <A href="https://www.griffith.edu.au/">School of Information and Communication Technology, Griffith University, Australia</A>. I have published over 40 papers in international conferences and journals such as SIGMOD/VLDB/ICDE/KDD/NeurIPS/TOIS/ICDM/CIKM.
+I have hosted several national-level projects, including key projects of the National Natural Science Foundation, general projects, youth projects, and sub-projects of key research and development plans. I have long served as a program committee member for important international academic conferences such as CIKM, DASFAA, APWEB-WAIM, and ADMA, and as a reviewer for top or important international academic journals and conferences such as TKDE, WWW, Pattern Recognition, and Information Science.
+</P>
+<font color=red><b>Prospective master’s or Ph.D. students interested in joining our team are welcome to contact me via email at yjyang@tju.edu.cn.</font></b></P>
 
 <h2><a name="ResearchInsterests" id="ResearchInsterests"></a><a
 name="_ResearchInsterests"></a> Research Insterests</h2>
@@ -633,6 +634,7 @@ name="_Publications"></a>Selected Publications</h2>
         [<a href="publications/dasfaa23.pdf">PDF</a>][<a href="https://dblp.uni-trier.de/rec/conf/dasfaa/WangYGH23.html?view=bibtex">Bibtex</a>]
   </LI>
 
+  <!--
   <LI>
   		<b><font color="#FF0000">[IOTJ'22]</font></b>&nbsp 
   	                Jiawen Chen, <B>Yajun Yang*</B>, Chenyang Wang, Heng Zhang, Chao Qiu, Xiaofei Wang.
@@ -688,7 +690,7 @@ name="_Publications"></a>Selected Publications</h2>
                                 <B>IterG: An Iteratively Learning Graph Convolutional Network with Ontology Semantics.</B> <I>Web and Big Data - 4th International Joint Conference</I> <B>(APWeb-WAIM 2020) (CCF-C)</B>, 2020.
         [<a href="publications/apweb20-2.pdf">PDF</a>][<a href="https://dblp.uni-trier.de/rec/conf/apweb/LiangZLY20.html?view=bibtex">Bibtex</a>]
   </LI>
-
+-->
  <LI>
   		<b><font color="#FF0000">[JS'19]</font></b>&nbsp 
   		LI Zhong-Fei, <B>YANG Ya-Jun*</B>, WANG Xin.
@@ -696,6 +698,7 @@ name="_Publications"></a>Selected Publications</h2>
         [<a href="publications/js19-1.pdf">PDF</a>]
   </LI>
 
+  <!--
  <LI>
   		<b><font color="#FF0000">[JS'19]</font></b>&nbsp 
   		WANG Xin, XU Qiang, CHAI Le-Le, <B>YANG Ya-Jun*</B>, CHAI Yun-Peng.
@@ -730,14 +733,14 @@ name="_Publications"></a>Selected Publications</h2>
         <B>A Label Inference Method Based on Maximal Entropy Random Walk over Graphs.</B> <I>The 18th Asia Pacific Web Conference</I> <B>(APWeb 2016) (CCF-C)</B>, 2016.
         [<a href="publications/Pan-2016-A-label-inference-method-based-on-m.pdf">PDF</a>][<a href="https://dblp.uni-trier.de/rec/conf/apweb/PanYHS16.html?view=bibtex">Bibtex</a>]
   </LI>
-
+-->
   <LI>
   		<b><font color="#FF0000">[VLDB'14]</font></b>&nbsp
   		<B>Yajun Yang</B>, Hong Gao, Jeffrey Xu Yu*, Jianzhong Li. 
         <B>Finding the Cost-Optimal Path with Time Constraint over Time-Dependent Graphs.</B> <I>The 40th International Conference on Very Large Databases</I> <B>(VLDB 2014) (CCF-A)</B>, 2014.
         [<a href="publications/p673-yang.pdf">PDF</a>][<a href="https://dblp.uni-trier.de/rec/journals/pvldb/YangGYL14.html?view=bibtex">Bibtex</a>]
   </LI>
-
+<!--
   <LI>
   		<b><font color="#FF0000">[WWWJ'14]</font></b>&nbsp
   		<B>Yajun Yang</B>, Jeffrey Xu Yu*, Hong Gao, Jianzhong Li. 
@@ -782,7 +785,7 @@ name="_Publications"></a>Selected Publications</h2>
 		<B>A Distributed and Kernal Based Scheme for Location Verification in Wireless Sensor Networks.</B> (In English). 
         <I>The 5th Chinese Conference on Wireless Sensor Networks</I><B> (CWSN)</B>, 2011. <B>Best Paper Award</B>.	
   </LI>
-
+-->
 </OL>
 
 <h2><a name="ResearchFundings" id="ResearchFundings"></a><a
@@ -802,19 +805,32 @@ name="_ResearchFundings"></a>Research Fundings</h2>
 <h2><a name="Destinations" id="Destinations"></a><a
 name="_Destinations"></a>Graduate Destinations</h2>
 <UL>
-<LI>2025：zhangsan（xx company），lisi（xx company）
-<LI>2024：zhangsan（xx company），lisi（xx company）
+
+    <table>
+      <tr><td>Junliang Li</td><td>Tencent ERNIE Bot</td></tr>
+      <tr><td>Xiaorui Xu</td><td>ByteDance</td></tr>
+      <tr><td>Tianbao Wang</td><td>AVIC Shenyang aircraft industry (Group) Co., Ltd</td></tr>
+      <tr><td>Pinfa Pu</td><td>Tencent Financial Services</td></tr>
+      <tr><td>Hang Zhang</td><td>Tianjin Municipal Tax Service, State Taxation Administration</td></tr>
+      <tr><td>Zi'an Pan</td><td>Kuaishou</td></tr>
+      <tr><td>Hanxiao Li</td><td>Xi'an Institute of Applied Optics</td></tr>
+      <tr><td>Zhongfei Li</td><td>Galaxy Securities</td></tr>
+      <tr><td>Peng Yu</td><td>Tianjin Urban Planning and Design Institute</td></tr>
+      <tr><td>Jing Pan</td><td>Tianjin R&D Department of R&D Center, Agricultural Bank of China</td></tr>
+    </table>
+</ul>
+
+
 </UL>
-<!--
 <h2><a name="Teaching" id="Teaching"></a><a
 name="_Teaching"></a>Teaching</h2>
 <hr>
 <UL>
 <LI>Algorithm Design and Analysis (<a href="course/Algorithm/Algorithm_01.pptx">A01</a>, <a href="course/Algorithm/Algorithm_02.pptx">A02</a>, <a href="course/Algorithm/Algorithm_03.pptx">A03</a>, <a href="course/Algorithm/Algorithm_04.pptx">A04</a>, <a href="course/Algorithm/Algorithm_05.pptx">A05</a>, <a href="course/Algorithm/Algorithm_06.pptx">A06</a>, <a href="course/Algorithm/Algorithm_07.pptx">A07</a>, <a href="course/Algorithm/Algorithm_08.pptx">A08</a>, <a href="course/Algorithm/Algorithm_09.pptx">A09</a>, <a href="course/Algorithm/Algorithm_10.pptx">A10</a>, <a href="course/Algorithm/Algorithm_11.pptx">A11</a>, <a href="course/Algorithm/Algorithm_12.pptx">A12</a>)
 <LI>Mathmatic on Artificial Intelligence（<a href="course/AImath/ch00.pdf">M01</a>, <a href="course/AImath/ch01.pdf">M02</a>, <a href="course/AImath/ch02.pdf">M03</a>, <a href="course/AImath/ch03.pdf">M04</a>, <a href="course/AImath/ch04.pdf">M05</a>, <a href="course/AImath/ch05.ppt">M06</a>, <a href="course/AImath/ch06.ppt">M07</a>）
-<LI>Formal Language and Automata（<a href="course/FormalL/ch00.pdf">C01</a>, <a href="course/FormalL/ch01_1.pdf">C02</a>, <a href="course/FormalL/ch01_2.pdf">C03</a>, <a href="course/FormalL/ch02_1.pdf">C04</a>, <a href="course/FormalL/ch02_2.pdf">C05</a>, <a href="course/FormalL/ch03.pdf">C06</a>, <a href="course/FormalL/MD.pdf">C07</a>, <a href="course/FormalL/suppl_rg.pdf">C08</a>）
-</UL> 
+<!--<LI>Formal Language and Automata（<a href="course/FormalL/ch00.pdf">C01</a>, <a href="course/FormalL/ch01_1.pdf">C02</a>, <a href="course/FormalL/ch01_2.pdf">C03</a>, <a href="course/FormalL/ch02_1.pdf">C04</a>, <a href="course/FormalL/ch02_2.pdf">C05</a>, <a href="course/FormalL/ch03.pdf">C06</a>, <a href="course/FormalL/MD.pdf">C07</a>, <a href="course/FormalL/suppl_rg.pdf">C08</a>）
 -->
+</UL> 
 <div>
 
 <script>
