--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ name="_ResearchInsterests"></a> 研究方向</h2>
 -->
 
 <h2><a name="Publications" id="Publications"></a><a
-name="_Publications"></a>代表性论文（第一作者/通讯作者）</h2>
+name="_Publications"></a>近年来代表性论文（第一作者/通讯作者）</h2>
 <hr>
 
 <OL class="pub-list">
@@ -529,8 +529,8 @@ name="_ResearchInsterests"></a> Research Insterests</h2>
 <hr>
 <UL>
 <LI>Knowledge Enhancement for Large Language Models
-<LI>Social Network Analysis
-<LI>Graph Date Management, Graph Mining, Machine Learning
+<LI>Social Network Analysis and Computing
+<LI>Graph Data Management, Graph Mining, Graph Learning
 
 </UL>
 
@@ -576,7 +576,7 @@ name="_Publications"></a>Selected Publications</h2>
 
 <OL class="pub-list">
  <LI>
-  		<b><font color="#FF0000">[KDD'25]</font></b>&nbsp 
+  		<b><font color="#FF0000">[KDD]</font></b>&nbsp 
   		Zihan Feng, <B>Yajun Yang*</B>, Xin Huang, Hong Gao, Liping Jing, Qinghua Hu. 
         <B>Efficient Sphere-Effect Based Information Diffusion Prediction on Large-scale Social Networks.</B> <I> The 31st ACM SIGKDD Conference on Knowledge Discovery and Data Mining</I> <B>(KDD 2025) (CCF-A)</B>, 2025.
         [<a href="publications/kdd25.pdf">PDF</a>]
@@ -584,7 +584,7 @@ name="_Publications"></a>Selected Publications</h2>
 
 
   <LI>
-  		<b><font color="#FF0000">[AAAI'25]</font></b>&nbsp 
+  		<b><font color="#FF0000">[AAAI]</font></b>&nbsp 
   		Junliang Li, <B>Yajun Yang*</B>, Yujia Zhang, Qinghua Hu, Alan Zhao, Hong Gao. 
         <B>Public Opinion Field Effect and Hawkes Process Join Hands for Information Popularity Prediction.</B> <I>The AAAI Conference on Artificial Intelligence</I> <B>(AAAI 2025) (CCF-A)</B>, 2025.
         [<a href="publications/aaai25.pdf">PDF</a>][<a href="https://dblp.org/rec/conf/aaai/LiYZHZ025.html?view=bibtex">Bibtex</a>]
@@ -592,7 +592,7 @@ name="_Publications"></a>Selected Publications</h2>
 
 
   <LI>
-  		<b><font color="#FF0000">[DASFAA'24]</font></b>&nbsp 
+  		<b><font color="#FF0000">[DASFAA]</font></b>&nbsp 
   		Zihan Feng, Rui Wu, <B>Yajun Yang*</B>, Hong Gao, Xin Wang, Xueli Liu, Qinghua Hu. 
         <B>Multi-level Contrastive Learning on Weak Social Networks for Information Diffusion Prediction.</B> <I>Database Systems for Advanced Applications - 29th International Conference</I> <B>(DASFAA 2024) (CCF-B)</B>, 2024.
         [<a href="publications/dasfaa24.pdf">PDF</a>][<a href="https://dblp.org/rec/conf/dasfaa/FengWYGWLH24.html?view=bibtex">Bibtex</a>]
@@ -600,35 +600,35 @@ name="_Publications"></a>Selected Publications</h2>
 
 
   <LI>
-  		<b><font color="#FF0000">[SIGMOD'23]</font></b>&nbsp 
+  		<b><font color="#FF0000">[SIGMOD]</font></b>&nbsp 
   		<B>Yajun Yang</B>, Hanxiao Li, Xiangjv Zhu, Junhu Wang, Xin Wang*, Hong Gao. 
         <B>An Effective Index Method for Historical Reachability Queries over Evolving Graphs.</B> <I>The 2023 ACM SIGMOD/PODS International Conference on Management of Data</I> <B>(SIGMOD 2023) (CCF-A)</B>, 2023.
         [<a href="publications/sigmod23.pdf">PDF</a>][<a href="https://dblp.org/rec/journals/pacmmod/YangLZW0023.html?view=bibtex">Bibtex</a>]
   </LI>
 
   <LI>
-  		<b><font color="#FF0000">[NeurIPS'23]</font></b>&nbsp 
+  		<b><font color="#FF0000">[NeurIPS]</font></b>&nbsp 
             Junliang Li, <B>Yajun Yang*</B>,Qinghua Hu, Xin Wang, Hong Gao.
         <B>Public Opinion Field Effect Fusion in Representation Learning for Trending Topics Diffusion.</B> <I>Advances in Neural Information Processing Systems 36</I> <B>(NeurIPS 2023) (CCF-A)</B>, 2023.
         [<a href="publications/NeurIPS23.pdf">PDF</a>][<a href="https://dblp.org/rec/conf/nips/LiYHWG23.html?view=bibtex">Bibtex</a>]
   </LI>
 
   <LI>
-  		<b><font color="#FF0000">[ICDM'23]</font></b>&nbsp 
+  		<b><font color="#FF0000">[ICDM]</font></b>&nbsp 
             Junliang Li, <B>Yajun Yang*</B>,Qinghua Hu, Xin Wang, Hong Gao.
         <B>Hierarchical Label Inference Incorporating Attribute Semantics in Attributed Networks.</B> <I>The 2023 IEEE International Conference on Data Mining</I> <B>(ICDM 2023) (CCF-B)</B>, 2023.
         [<a href="publications/ICDM23.pdf">PDF</a>][<a href="https://dblp.org/rec/conf/icdm/LiYHW023.html?view=bibtex">Bibtex</a>]
   </LI>
 
   <LI>
-  		<b><font color="#FF0000">[TOIS'23]</font></b>&nbsp 
+  		<b><font color="#FF0000">[TOIS]</font></b>&nbsp 
   		Hang Zhang, <B>Yajun Yang*</B>, Xin Wang, Hong Gao, Qinghua Hu. 
                                 <B>MLI: A Multi-level Inference Mechanism for User Attributes in Social Networks.</B> <I>ACM Transactions on Information Systems</I> <B>(TOIS 2023) (CCF-A)</B>, 2023.
         [<a href="publications/tois23.pdf">PDF</a>][<a href="https://dblp.uni-trier.de/rec/journals/tois/ZhangYWGH23.html?view=bibtex">Bibtex</a>]
   </LI>
 
   <LI>
-  		<b><font color="#FF0000">[DASFAA'23]</font></b>&nbsp 
+  		<b><font color="#FF0000">[DASFAA]</font></b>&nbsp 
   		Tianbao Wang, <B>Yajun Yang*</B>, Qinghu Hu, Hong Gao.
                                 <B>MRSCN: A GNN-based Model for Mining RelatIOnship Strength Changes between Nodes in Dynamic Networks.</B> <I>Database Systems for Advanced Applications - 28th International Conference</I> <B>(DASFAA 2023) (CCF-B)</B>, 2023.
         [<a href="publications/dasfaa23.pdf">PDF</a>][<a href="https://dblp.uni-trier.de/rec/conf/dasfaa/WangYGH23.html?view=bibtex">Bibtex</a>]
@@ -692,7 +692,7 @@ name="_Publications"></a>Selected Publications</h2>
   </LI>
 -->
  <LI>
-  		<b><font color="#FF0000">[JS'19]</font></b>&nbsp 
+  		<b><font color="#FF0000">[JS]</font></b>&nbsp 
   		LI Zhong-Fei, <B>YANG Ya-Jun*</B>, WANG Xin.
                                 <B>Rule Based Shortest Path Query Algorithm.</B> (In Chinese). <I>Journal of Software</I> <B> (CCF-A Chinese)</B>, 2019.
         [<a href="publications/js19-1.pdf">PDF</a>]
@@ -735,7 +735,7 @@ name="_Publications"></a>Selected Publications</h2>
   </LI>
 -->
   <LI>
-  		<b><font color="#FF0000">[VLDB'14]</font></b>&nbsp
+  		<b><font color="#FF0000">[VLDB]</font></b>&nbsp
   		<B>Yajun Yang</B>, Hong Gao, Jeffrey Xu Yu*, Jianzhong Li. 
         <B>Finding the Cost-Optimal Path with Time Constraint over Time-Dependent Graphs.</B> <I>The 40th International Conference on Very Large Databases</I> <B>(VLDB 2014) (CCF-A)</B>, 2014.
         [<a href="publications/p673-yang.pdf">PDF</a>][<a href="https://dblp.uni-trier.de/rec/journals/pvldb/YangGYL14.html?view=bibtex">Bibtex</a>]
@@ -792,14 +792,14 @@ name="_Publications"></a>Selected Publications</h2>
 name="_ResearchFundings"></a>Research Fundings</h2>
 <hr>
 <UL>
-<LI> Research on Interpretable Multimodal Learning Methods Based on Large Language Models, Key Project of the National Natural Science Foundation of China, Principal Investigator (Project 3: Knowledge Enhancement for Large Language Models).
-<LI> Research on Key Technologies for Propagation Prediction of Large-Scale Social Network Public Opinion Events in Complex Public Opinion Environment, General Program of the National Natural Science Foundation of China, Principal Investigator.
-<LI> Intelligent Recommendation Algorithm for Cargo Placement Positions of Automated Container Cranes, Cooperative Project with Tianjin Port, Principal Investigator.
-<LI> Technical Service for Intelligent Generation Algorithm of Cargo Container Loading and Stowage Scheme for Port Automated Cranes, Cooperative Project with Tianjin Port, Principal Investigator.
-<LI> XXXX Algorithm Technical Service, The 54th Research Institute of China Electronics Technology Group Corporation, Principal Investigator.
-<LI> Research on the Propagation of Sensitive and Trending Topics on Social Media，State Key Laboratory of Communication Content Cognition Funded Project, Principal Investigator.
-<LI> Research on Collaborative Intelligent Computing and Edge Autonomy Optimization Method on Complex Networks, Subproject of National Key Research and Development Program of China, Subproject Principal Investigator.
-<LI> Research on Mining Algorithms for Unstable Sub-structures on Large Dynamic Graphs，National Natural Science Foundation of China, Principal Investigator.
+<LI> Research on Interpretable Multimodal Learning Methods Based on Large Language Models, <B>Key Project of the National Natural Science Foundation of China</B>, Principal Investigator (Project 3: Knowledge Enhancement for Large Language Models).
+<LI> Research on Key Technologies for Propagation Prediction of Large-Scale Social Network Public Opinion Events in Complex Public Opinion Environment, <B>General Program of the National Natural Science Foundation of China</B>, Principal Investigator.
+<LI> Intelligent Recommendation Algorithm for Cargo Placement Positions of Automated Container Cranes, <B>Cooperative Project with Tianjin Port</B>, Principal Investigator.
+<LI> Technical Service for Intelligent Generation Algorithm of Cargo Container Loading and Stowage Scheme for Port Automated Cranes, <B>Cooperative Project with Tianjin Port</B>, Principal Investigator.
+<LI> XXXX Algorithm Technical Service, <B>The 54th Research Institute of China Electronics Technology Group Corporation</B>, Principal Investigator.
+<LI> Research on the Propagation of Sensitive and Trending Topics on Social Media，<B>State Key Laboratory of Communication Content Cognition Funded Project</B>, Principal Investigator.
+<LI> Research on Collaborative Intelligent Computing and Edge Autonomy Optimization Method on Complex Networks, <B>Subproject of National Key Research and Development Program of China</B>, Subproject Principal Investigator.
+<LI> Research on Mining Algorithms for Unstable Sub-structures on Large Dynamic Graphs，<B>National Natural Science Foundation of China</B>, Principal Investigator.
 </UL>
 
 <h2><a name="Destinations" id="Destinations"></a><a
